# face-mask-detection-cnn-853x3

./: .gitignore  Claude.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.claude/: settings.local.json
docs/: mkdocs.yml
docs/docs/: index.md
face_mask_detection_853x3/: __init__.py  config.py  dataset.py  features.py  grid_search.py  plots.py
face_mask_detection_853x3/modeling/: losses.py  model.py  predict.py  train.py
filesexplanation/: dataset_py_explained.html  features_py_explained.html  transfer_learning_explanation.md
reports/figures/: evaluation_metrics.json  training_history.json
