[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "face_mask_detection_853x3"
version = "0.0.1"
description = "A computer vision project for detecting face masks using deep learning on a dataset of 853 images across 3 classes"
authors = [
  { name = "David Yataco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["face_mask_detection_853x3"]
include = ["pyproject.toml", "face_mask_detection_853x3/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["face_mask_detection_853x3"]
force-sort-within-sections = true

